fix no wrap

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -45,6 +45,10 @@ h1 {
   white-space: nowrap;
 }
 
+h2 {
+  white-space: nowrap;
+}
+
 h4 {
   margin: 0;
 }
